fixes some spacing, redoes breakpoint for big menu start

--- a/components/sass/modules/_image.scss
+++ b/components/sass/modules/_image.scss
@@ -21,6 +21,10 @@
 
   }
 
+  &--secondary {
+    margin-bottom: 1em;
+  }
+
   &--caption {
 
   }
