--- a/components/sass/modules/_site-branding.scss
+++ b/components/sass/modules/_site-branding.scss
@@ -3,6 +3,11 @@
   position: relative;
   box-shadow: 0 5px 10px 0 rgba(0,0,0,0.15),0 -5px 3px 10px #fff;
 
+  @include breakpoint($screen $big-menu-start $xlarge-start) {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  
   
   @include breakpoint($screen $big-menu-start) {
     margin-top: 1em;
