--- a/components/sass/utilities/_variables.scss
+++ b/components/sass/utilities/_variables.scss
@@ -74,7 +74,7 @@ $story-width-medium: 90%;
 
 $article-feature-image-max-width: 48em;
 
-$big-menu-start: $xlarge-start;
+$big-menu-start: $leaderboard-start;
 
 /*
  * Special
